# MLPy

./: .gitignore  README.md  install.ps1  meson.build  mlpy.cpp  uninstall.ps1
data/: hello.txt
meson_config/: config.h.in  meson.build
mlpy/: meson.build  mlpy.cpp
mlpy/core/: meson.build
mlpy/core/include/: meson.build
mlpy/core/include/common/: futils.h
mlpy/core/src/classifier/: processdata.cpp
mlpy/core/src/common/: fileutils.cpp  fileutils.h  futils.cpp
